# ds-u2-actividad-1-listasenlazadassimples-clemezap-edu

./: CMakeLists.txt  Doxyfile  README.md
docs/html/: ListaSensor_8h.html  ListaSensor_8h__dep__incl.map  ListaSensor_8h__dep__incl.md5  ListaSensor_8h__incl.map  ListaSensor_8h__incl.md5  ListaSensor_8h_source.html  SensorBase_8cpp.html  SensorBase_8cpp__incl.map  SensorBase_8cpp__incl.md5  SensorBase_8h.html  SensorBase_8h__dep__incl.map  SensorBase_8h__dep__incl.md5  SensorBase_8h_source.html  SensorPresion_8cpp.html  SensorPresion_8cpp__incl.map  SensorPresion_8cpp__incl.md5  SensorPresion_8h.html  SensorPresion_8h__dep__incl.map  SensorPresion_8h__dep__incl.md5  SensorPresion_8h__incl.map  SensorPresion_8h__incl.md5  SensorPresion_8h_source.html  SensorTemperatura_8cpp.html  SensorTemperatura_8cpp__incl.map  SensorTemperatura_8cpp__incl.md5  SensorTemperatura_8h.html  SensorTemperatura_8h__dep__incl.map  SensorTemperatura_8h__dep__incl.md5  SensorTemperatura_8h__incl.map  SensorTemperatura_8h__incl.md5  SensorTemperatura_8h_source.html  SistemaGestion_8cpp.html  SistemaGestion_8cpp__incl.map  SistemaGestion_8cpp__incl.md5  SistemaGestion_8h.html  SistemaGestion_8h__dep__incl.map  SistemaGestion_8h__dep__incl.md5  SistemaGestion_8h__incl.map  SistemaGestion_8h__incl.md5  SistemaGestion_8h_source.html  (+137 more)
docs/report/: reporte.md
esp32/sensor_simulator/: sensor_simulator.ino
include/: ListaSensor.h  SensorBase.h  SensorPresion.h  SensorTemperatura.h  SistemaGestion.h
src/: SensorBase.cpp  SensorPresion.cpp  SensorTemperatura.cpp  SistemaGestion.cpp  main.cpp
(+25 files in other folders)
